adding the filter to the reports
